Add new GC option for JVM version > 9
All the documented options are deprecated in the latest version of the JVM.