@@ -30,3 +30,8 @@ The following can be helpful for diagnosing garbage collection (GC) issues:
     -XX:+PrintAdaptiveSizePolicy
     -XX:+PrintSafepointStatistics
     -XX:PrintSafepointStatisticsCount=1
+
+If Java JMV Version > 9:
+
+.. code-block:: none
+    -Xlog:gc*,safepoint::time,level,tags,tid
